# Marker_ENV

./: .gitignore  Readme.md  pyproject.toml
task/: Install.ps1  Process-File.ps1  Process-Folder.ps1  Process.ps1
